spacing issues

--- a/templates/default/V1.scss
+++ b/templates/default/V1.scss
@@ -1,4 +1,4 @@
-$tag: '.cv-<<<CLIENT_CODE_LOWERCASE>>>-<<<EXPERIMENT_NUMBER_HYPHENATED>>>';
+$tag: ".cv-<<<CLIENT_CODE_LOWERCASE>>>-<<<EXPERIMENT_NUMBER_HYPHENATED>>>";
 
 #{$tag} {
     background-color: yellow !important;
